current time and journal entry time, fix attempt 1.5

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class = "row">
             <div class = "jumbotron">
                 <div class = "container-fluid">
-                    <div id = "time">
-                        <p>time</p>
-                    </div>
+                    <div id = "time"></div>
                     <center>
                         <div class = "border">
                             <h1 id = "title" contenteditable = "true"></h1>
