fixed 'click on me to...' error

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
                 </div>
             </div>
         </div>
-
+        <div>
+            <div id = "date">
+                Today
+            </div>
             <div class = "diary" contenteditable="true">
-                <div id = "date">
-                        document.getElementById("demo").innerHTML = Date();
-                </div>
                     <div id="content" contenteditable="true">
                         <p>Click on me to get started!</p>
                     </div>
             </div>
+        </div>
  
         <!-- JAVA LINKS -->
         <script type="text/javascript" src="JS/jquery-3.3.1.js"></script>
